styled the inputs better

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row">
              <div class="col-4">
                 <form class="weather">
-                    <input class="zip" type="text" placeholder="city or zipcode"><button type="submit">submit</button>
+                    <input id="input" class="zip submit" type="text" placeholder="city or zipcode"><button type="submit" class="submit">submit</button>
                   </form>
                   <div class="city"></div>
              </div>
