--- a/index.html
+++ b/index.html
@@ -33,18 +33,25 @@
     </header>
     <div class="container" id="innerContainer">
         <div class="row">
-             <div class="col-4">
+             <div class="col-md-2">
                 <form class="weather">
-                    <input id="input" class="zip submit" type="text" placeholder="city or zipcode"><button type="submit" class="submit">submit</button>
+                    <input id="input" class="zip submit" type="text" placeholder="city or zip"><button type="submit" class="submit">submit</button>
                   </form>
                   <div class="city"></div>
              </div>
-             <div class="col-8">
+             <div class="col-md-10">
                 <div class="city"></div>
                 <div class="wind"></div>
                 <div class="humidity"></div>
                 <div class="temp"></div>
                 <div><span class="uv-index"></span></div>
+                <div class="row">
+                    <div class="col-2 day-1"></div>
+                    <div class="col-2 day-2"></div>
+                    <div class="col-2 day-3"></div>
+                    <div class="col-2 day-4"></div>
+                    <div class="col-2 day-5"></div>
+                </div>
              </div>
         </div>        
     </div>
