consolidated functionality for the 5 day forecast into a loop. will get the daily high/low temp as well as the icon associated with the specific date

--- a/index.html
+++ b/index.html
@@ -46,11 +46,37 @@
                 <div class="temp"></div>
                 <div><span class="uv-index"></span></div>
                 <div class="row">
-                    <div class="col-2 day-1"></div>
-                    <div class="col-2 day-2"></div>
-                    <div class="col-2 day-3"></div>
-                    <div class="col-2 day-4"></div>
-                    <div class="col-2 day-5"></div>
+                    <div class="col-2 day-1">
+                        <h3 id="day-1"></h3>
+                        <img class="icon-1 hide" src="" alt="weather-icon">
+                        <div class="high-1"></div>
+                        <div class="low-1"></div>
+                    </div>
+                    <div class="col-2 day-2">
+                        <h3 id="day-2"></h3>
+                        <img class="icon-2 hide" src="" alt="weather-icon">
+                        <div class="high-2"></div>
+                        <div class="low-2"></div>
+                    </div>
+                    <div class="col-2 day-3">
+                        <h3 id="day-3"></h3>
+                        <img class="icon-3 hide" src="" alt="weather-icon">
+                        <div class="high-3"></div>
+                        <div class="low-3"></div>
+                    </div>
+                    <div class="col-2 day-4">
+                        <h3 id="day-4"></h3>
+                        <img class="icon-4 hide" src="" alt="weather-icon">
+                        <div class="high-4"></div>
+                        <div class="low-4"></div>
+                    </div>
+                    <div class="col-2 day-5">
+                        <h3 id="day-5"></h3>
+                        <img class="icon-5 hide" src="" alt="weather-icon">
+                        <div class="high-5"></div>
+                        <div class="low-5"></div>
+
+                    </div>
                 </div>
              </div>
         </div>        
