--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
   </head>
 
   <body>
+
+    <div class="scrollmenu history">
+        <p>History:</p>
+        <button>Hey!</button>
+
+      </div>
     <header class="jumbotron">
       <h1 class="display-3">Current Weather</h1>
       <p class="lead">See what's going on in your city, and around the World.</p>
@@ -36,8 +42,7 @@
              <div class="col-md-3">
                 <form class="weather">
                     <input id="input" class="zip submit" type="text" placeholder="city or zip"><button type="submit" class="submit">submit</button>
-                  </form>
-                  <div class="city"></div>
+                  </form>        
              </div>
              <div class="col-md-9">
                  <div class="row">
@@ -54,6 +59,8 @@
                         <img id="current-icon" src="" alt="current-weather-icon" class="hide">
                     </div>
                 </div>
+             </div>
+        </div>
                 <div class="row days hide">
                     <div class="day-1 IB hide">
                         <h5 id="day-1"></h5>
@@ -88,8 +95,7 @@
 
                 </div>
              </div>
-        </div>        
-    </div>
+
 
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.28.0/moment.min.js"></script>
