--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     <header class="jumbotron">
       <h1 class="display-3">Current Weather</h1>
-      <p class="lead">See what's going on in your city, and around the World.</p>
+      <p class="lead">See what's going on in your city, and around the world.</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container" id="innerContainer">
