--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
              </div>
         </div>
-            <h3 class="text-center">5 Day Forecast</h3>
+            <h3 class="text-center hide 5day">5 Day Forecast</h3>
                 <div class="row days hide">
                     <div class="day-1 IB hide">
                         <h5 id="day-1"></h5>
