--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <input id="input" class="zip submit" type="text" placeholder="city or zip"><button type="submit" class="submit">submit</button>
                   </form>        
              </div>
-             <div class="col-md-9">
+             <div class="col-md-9 current-weather hide">
                  <div class="row">
                     <div class="col-md-6">
                     <ul class="no-list-style">
@@ -61,7 +61,6 @@
                 </div>
              </div>
         </div>
-            <h3 class="text-center hide 5day">5 Day Forecast</h3>
                 <div class="row days hide">
                     <div class="day-1 IB hide">
                         <h5 id="day-1"></h5>
