more margin fix

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container" id="innerContainer">
-        <div class="row">
+        <div class="row marginBottom">
              <div class="col-md-3">
                 <form class="weather">
                     <input id="input" class="zip submit" type="text" placeholder="city or zip"><button type="submit" class="submit">submit</button>
