ok now styles are finalized

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <div class="container" id="innerContainer">
         <div class="row marginBottom">
-            <div class="col-md-3">
+            <div class="col-md-3 marginBottom">
                 <form class="weather">
                     <input id="input" class="zip submit" type="text" placeholder="city or zip"><button type="submit" class="submit">submit</button>
                   </form>        
