added clear history button

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
         <div class="row marginBottom">
             <div class="col-md-3 marginBottom">
                 <form class="weather">
-                    <input id="input" class="zip submit" type="text" placeholder="city or zip"><button type="submit" class="submit">submit</button>
-                  </form>        
+                    <input id="input" class="zip submit" type="text" placeholder="city or zip">
+                    <button type="submit" class="submit">submit</button><br>
+                    
+                  </form>    
+                  <button class="clear">clear history</button>    
             </div>
             <div class="col-md-9 current-weather hide">                    
                     <ul class="no-list-style">
