final commit, added pageload function to render the last searched city's weather onload

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="style/style.css" />
     
   </head>
-
-  <body>
+<!-- load the last searched city on pageload -->
+  <body onload="renderLastSearch()">
 
     <div class="scrollmenu history">
         <p>History:</p>
