forgot to take function out of the index file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
   </head>
 <!-- load the last searched city on pageload -->
-  <body onload="renderLastSearch()">
+  <body>
 
     <div class="scrollmenu history">
         <p>History:</p>
